


== TRex release notes ==
endif::backend-docbook[]

ifdef::backend-docbook[]

== TRex release notes  ==
:numbered:

endif::backend-docbook[]

== Pre-Release 2.31 ==

* Stateless
** Console - added option to save loaded streams as Python profile (stream command from the Console)
* TCP some performance improvements (up to 5MPPS/core)
** Tune TCP timers for traffic generation case (e.g. 2MSL/keepalive is shorter)
** Add support to RFC6928 (add support for initwnd and set it by default to 10). A way to tune all the TCP parameters (including this one) will be given from the traffic profile.
** Protect TRex ASTF resource (e.g. overflow in active flows)
** General hardening  
* Refactor the code to support ASTF in interactive mode (both STL and STF will work with the same RPC framework)
* Increase the TX queue for all drivers by default - less probability for queue_full in high rates

=== Fixed issues: ===

* link:https://trex-tgn.cisco.com/youtrack/issue/trex-491[trex-491]
* link:https://trex-tgn.cisco.com/youtrack/issue/trex-486[trex-486]
* link:https://trex-tgn.cisco.com/youtrack/issue/trex-492[trex-492]
* link:https://trex-tgn.cisco.com/youtrack/issue/trex-485[trex-485]

== Release 2.30 ==

* Advance Stateful (ASTF) with scalable TCP support 
** Support all SFR profile with TCP flows 
** Mellanox driver issue workaround see here link:https://trex-tgn.cisco.com/youtrack/issue/trex-481[trex-481]
** Hardening
** Add full simulation support using `./astf-sim --full`  see here link:trex_astf.html[ASTF mode] 
* Wireless AP/Station emulation plugin for WLC testing. 
** Improve performance considerably
** Update documentation link:trex_stateless_wlc_bench.html[WLC] 
* Support Napatech NIC (100Gb@64B line-rate)
* Stateless 
** Full Stream object are return from the client
** Old YAML profile support was removed

=== Fixed issues: ===

* link:https://trex-tgn.cisco.com/youtrack/issue/trex-483[trex-483]
* link:https://trex-tgn.cisco.com/youtrack/issue/trex-480[trex-480]