@@ -1,0 +1,33 @@
+---
+- name: "l1"
+  
+  stream:
+    action_count: 0
+    enabled: true
+    flags: 0
+    flow_stats:
+      enabled: true
+      rule_type: "latency"
+      stream_id: 12
+    isg: 0.0
+    mode:
+      rate:
+        type: "pps"
+        value: 4000.0
+      type: "continuous"
+      total_pkts: 1
+      pkts_per_burst: 1
+      ibg: 0.0
+      count: 1
+    
+    packet:
+      binary: "AAAAAAAAAAAAAAAACABFAAAuBNIAAH8R9usQAAABMAAAAQQBBAEAEgAAAAAAAAAAAAAAAAAAAAAAAAAA"
+      meta: "eyJwcm90b2NvbF9zZWxlY3Rpb24iOnsiaXNfdGFnZ2VkX3ZsYW5fc2VsZWN0ZWQiOmZhbHNlLCJpc19wYXR0ZXJuX3NlbGVjdGVkIjp0cnVlLCJmcmFtZV9sZW5ndGhfdHlwZSI6IkZpeGVkIiwiaXNfaXB2NF9zZWxlY3RlZCI6dHJ1ZSwiaXNfdGNwX3NlbGVjdGVkIjpmYWxzZSwiaXNfdWRwX3NlbGVjdGVkIjp0cnVlLCJmcmFtZV9sZW5ndGgiOiI2NCIsIm1heF9sZW5ndGgiOiIxNTE4IiwibWluX2xlbmd0aCI6IjY0In0sImV0aGVybmV0Ijp7InR5cGUiOiIwODAwIiwiaXNfb3ZlcnJpZGUiOmZhbHNlfSwibWFjIjp7InNvdXJjZSI6eyJhZGRyZXNzIjoiMDA6MDA6MDA6MDA6MDA6MDAiLCJjb3VudCI6IjE2IiwibW9kZSI6IlRSZXggQ29uZmlnIiwic3RlcCI6IjEifSwiZGVzdGluYXRpb24iOnsiYWRkcmVzcyI6IjAwOjAwOjAwOjAwOjAwOjAwIiwiY291bnQiOiIxNiIsIm1vZGUiOiJUUmV4IENvbmZpZyIsInN0ZXAiOiIxIn19LCJpcHY0Ijp7InNvdXJjZSI6eyJhZGRyZXNzIjoiMTYuMC4wLjEiLCJjb3VudCI6IjE2IiwibW9kZSI6IkZpeGVkIiwic3RlcCI6IjEifSwiZGVzdGluYXRpb24iOnsiYWRkcmVzcyI6IjQ4LjAuMC4xIiwiY291bnQiOiIxNiIsIm1vZGUiOiJGaXhlZCIsInN0ZXAiOiIxIn19LCJ0Y3AiOnsiaXNfb3ZlcnJpZGVfZHN0X3BvcnQiOmZhbHNlLCJpc19vdmVycmlkZV9zcmNfcG9ydCI6ZmFsc2UsImlzX292ZXJyaWRlX2NoZWNrc3VtIjpmYWxzZSwid2luZG93IjoiMTAyNCIsImRzdF9wb3J0IjoiMTAyNSIsInNyY19wb3J0IjoiMTAyNSIsImNoZWNrc3VtIjoiQjNFMyIsInNlcXVlbmNlX251bWJlciI6IjEyOTAxOCIsImFja19udW1iZXIiOiIwIiwidXJnZW50X3BvaW50ZXIiOiIwIiwiaXNfdXJnIjpmYWxzZSwiaXNfYWNrIjpmYWxzZSwiaXNfcHNoIjpmYWxzZSwiaXNfcnN0IjpmYWxzZSwiaXNfc3luYyI6ZmFsc2UsImlzX2ZpbiI6ZmFsc2V9LCJ1ZHAiOnsiaXNfb3ZlcnJpZGVfZHN0X3BvcnQiOmZhbHNlLCJsZW5ndGgiOiIyNiIsImlzX292ZXJyaWRlX3NyY19wb3J0IjpmYWxzZSwiaXNfb3ZlcnJpZGVfY2hlY2tzdW0iOmZhbHNlLCJpc19vdmVycmlkZV9sZW5ndGgiOmZhbHNlLCJkc3RfcG9ydCI6IjEwMjUiLCJzcmNfcG9ydCI6IjEwMjUiLCJjaGVja3N1bSI6IkZGQkEifSwicGF5bG9hZCI6eyJ0eXBlIjoiRml4ZWQgV29yZCIsInBhdHRlcm4iOiIwMCJ9LCJ2bGFuIjp7InByaW9yaXR5IjoiMCIsImlzX292ZXJyaWRlX3RwX2lkIjpmYWxzZSwidHBfaWQiOiJGRkZGIiwiY2ZpIjoiMCIsInZfaWQiOiIwIn0sImFkdmFuc2VkX3Byb3BlcnRpZXMiOnsiY2FjaGVfdmFsdWUiOiI1MDAwIiwiY2FjaGVfc2l6ZV90eXBlIjoiQXV0byJ9LCJtb2RlbF92ZXJzaW9uIjoiMS4wIn0="
+      model: ""
+    self_start: true
+    advanced_mode: false
+    vm:
+      split_by_var: ""
+      instructions: []
+      cache_size: 5000
+  stream_id: 0
